--- a/home.html
+++ b/home.html
@@ -437,13 +437,62 @@
                         print("--------- INTEGRIDADE ---------\n")
                 </code>
             </pre>
+
+
+            <p>
+                <b>Cliente sem autenticação:</b>
+            </p>
         </div>
     </section>
     <section>
         <h2> Código comentado </h2>
+        <ul>
+            <li>
+                <a href="./cliente.py.txt" target="_blank">cliente.py</a>
+            </li>
+            <li>
+                <a href="./servidor.py.txt" target="_blank">servidor.py</a>
+            </li>
+            <li>
+                <a href="./utils.py.txt" target="_blank">utils.py</a>
+            </li>
+            <li>
+                <a href="./cliente_do_mau.py.txt" target="_blank">cliente_do_mau.py</a>
+            </li>
+        </ul>
     </section>
     <section>
         <h2> Execução + Logs </h2>
+        <ul>
+            <li>
+                Servidor fazendo o handshake<br>
+                <img src="./handshake_execucao.png">
+            </li>
+
+            <li>
+                Cliente fazendo o handshake<br>
+                <img src="./handshake_cliente_execucao.png">
+            </li>
+            <li>
+                Sigilo das mensagens<br>
+                <img src="./sigilo_cliente.png">
+            </li>
+
+            <li>
+                Integridade das mensagens (mensagem modificada e mostra uma criptografia diferente)<br>
+                <img src="./Integridade.png">
+            </li>
+
+            <li>
+                Mensagens recebidas<br>
+                <img src="./mensagens_servidor.png">
+            </li>
+
+            <li>
+                Autenticidade - Cliente sem certificado tentando acessar o servidor<br>
+                <img src="./autenticidade.png">
+            </li>
+        </ul>
     </section>
 
 </body>
